# crypto-aip

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: CodeCoverage.cmake  Doxygen.cmake  SourcesAndHeaders.cmake  StandardSettings.cmake  StaticAnalyzers.cmake  version.hpp.in
include/: simpletlsconnection.h
include/crypto/: stegocontainer.h  xorencryption.h
include/telegram/: message.h  tgbot.h
src/: main.cpp  simpletlsconnection.cpp
src/crypto/: stegofile.cpp  xorencryption.cpp
src/telegram/: message.cpp  tgbot.cpp
test/: CMakeLists.txt
test/src/: stegocontainer_test.cpp  telegram_message_test.cpp  xor_test.cpp
